k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-violin
spec:
  replicas: 1
  selector:
    matchLabels:
      name: go-violin
  template:
    metadata:
      labels:
        name: go-violin
    spec:
      containers:
      - name: app
        image: mostafaw/goviolin:latest 
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
