k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: goviolin-service
spec:
  type: NodePort
  selector:
    app: goviolin
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30000
