k8s/ingress.yaml
# *********** NOT USED WITH MINIKUBE ***********
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goviloin
  labels:
    name: goviloin
spec:
  rules:
  - host: mostafa.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goviolin-service
            port: 
              number: 8080
